k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    name: apps
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
